--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
-.gradle
-/build/
+.gradle/
+.idea/
+
+build/
+target/
 
 # Ignore Gradle GUI config
 gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+!maven-wrapper.jar
 
 # Cache of project
 .gradletasknamecache
