--- a/spring-weather-jar/src/main/resources/application.properties
+++ b/spring-weather-jar/src/main/resources/application.properties
@@ -5,6 +5,7 @@ info.app.version=1.0.0
 
 management.server.port=8080
 
+management.endpoints.web.base-path=/
 management.endpoints.web.exposure.include=*
 management.endpoint.beans.enabled=true
 management.endpoint.env.enabled=true
