Added in container build and README instructions.

--- a/helidon-weather-mp/Dockerfile
+++ b/helidon-weather-mp/Dockerfile
@@ -1,3 +1,16 @@
+FROM openjdk:8 as builder
+
+WORKDIR /helidon
+
+COPY .mvn/ ./.mvn/
+COPY mvnw ./
+COPY pom.xml ./
+
+RUN ./mvnw package
+
+COPY src/ src/
+RUN ./mvnw package -DskipTests
+
 FROM gcr.io/distroless/java:8
 
 WORKDIR /helidon
@@ -6,5 +19,5 @@ EXPOSE 8080
 
 ENTRYPOINT ["java", "-jar", "helidon-weather-mp.jar"]
 
-COPY target/libs ./libs
-COPY target/helidon-weather-mp.jar ./
+COPY --from=builder /helidon/target/libs ./libs
+COPY --from=builder /helidon/target/helidon-weather-mp.jar ./
