--- a/tomee-weather/Dockerfile
+++ b/tomee-weather/Dockerfile
@@ -16,9 +16,9 @@ FROM openjdk:8
 
 WORKDIR /tomee
 
-EXPOSE 8080 8005 8009
+EXPOSE 8080 8005 8009 9090
 
-ENTRYPOINT ["java", "-jar", "/tomee/tomee-weather-exec.jar"]
+ENTRYPOINT ["java","-XX:+UseContainerSupport", "-XX:MaxRAMPercentage=75.0", "-XX:ThreadStackSize=256", "-XX:MaxMetaspaceSize=128m", "-XX:+UseG1GC", "-XX:MaxGCPauseMillis=250", "-XX:+UseStringDeduplication", "-Dcom.sun.management.jmxremote", "-Dcom.sun.management.jmxremote.port=9090", "-Djava.rmi.server.hostname=localhost", "-Dcom.sun.management.jmxremote.rmi.port=9090", "-Dcom.sun.management.jmxremote.ssl=false", "-Dcom.sun.management.jmxremote.authenticate=false", "-jar", "/tomee/tomee-weather-exec.jar"]
 
 COPY --from=builder /tomee/target/tomee-weather-exec.jar ./
 
