--- a/helidon-weather-mp/Dockerfile
+++ b/helidon-weather-mp/Dockerfile
@@ -15,9 +15,9 @@ FROM gcr.io/distroless/java:8
 
 WORKDIR /helidon
 
-EXPOSE 8080
+EXPOSE 8080 9090
 
-ENTRYPOINT ["java", "-jar", "helidon-weather-mp.jar"]
+ENTRYPOINT ["java","-XX:+UseContainerSupport", "-XX:MaxRAMPercentage=75.0", "-XX:ThreadStackSize=256", "-XX:MaxMetaspaceSize=128m", "-XX:+UseG1GC", "-XX:MaxGCPauseMillis=250", "-XX:+UseStringDeduplication", "-Dcom.sun.management.jmxremote", "-Dcom.sun.management.jmxremote.port=9090", "-Djava.rmi.server.hostname=localhost", "-Dcom.sun.management.jmxremote.rmi.port=9090", "-Dcom.sun.management.jmxremote.ssl=false", "-Dcom.sun.management.jmxremote.authenticate=false", "-jar", "helidon-weather-mp.jar"]
 
 COPY --from=builder /helidon/target/libs ./libs
 COPY --from=builder /helidon/target/helidon-weather-mp.jar ./
