--- a/meecrowave-weather/Dockerfile
+++ b/meecrowave-weather/Dockerfile
@@ -15,8 +15,8 @@ FROM gcr.io/distroless/java:8
 
 WORKDIR /meecrowave
 
-EXPOSE 8080
+EXPOSE 8080 9090
 
-ENTRYPOINT ["java", "-jar", "meecrowave-weather-1.0.0-fat.jar"]
+ENTRYPOINT ["java","-XX:+UseContainerSupport", "-XX:MaxRAMPercentage=75.0", "-XX:ThreadStackSize=256", "-XX:MaxMetaspaceSize=128m", "-XX:+UseG1GC", "-XX:MaxGCPauseMillis=250", "-XX:+UseStringDeduplication", "-Dcom.sun.management.jmxremote", "-Dcom.sun.management.jmxremote.port=9090", "-Djava.rmi.server.hostname=localhost", "-Dcom.sun.management.jmxremote.rmi.port=9090", "-Dcom.sun.management.jmxremote.ssl=false", "-Dcom.sun.management.jmxremote.authenticate=false", "-jar", "meecrowave-weather-1.0.0-fat.jar"]
 
 COPY --from=builder /meecrowave/target/meecrowave-weather-1.0.0-fat.jar ./
