--- a/payara-weather-jar/pom.xml
+++ b/payara-weather-jar/pom.xml
@@ -31,6 +31,14 @@
       <type>pom</type>
       <scope>provided</scope>
     </dependency>
+    <!--
+    <dependency>
+      <groupId>org.jboss</groupId>
+      <artifactId>jandex</artifactId>
+      <version>2.1.3.Final</version>
+      <scope>runtime</scope>
+    </dependency>
+    -->
   </dependencies>
 
   <build>
@@ -75,6 +83,7 @@
               </commandLineOptions>
             </configuration>
           </plugin>
+          <!--
           <plugin>
             <groupId>org.jboss.jandex</groupId>
             <artifactId>jandex-maven-plugin</artifactId>
@@ -88,6 +97,7 @@
               </execution>
             </executions>
           </plugin>
+          -->
         </plugins>
       </build>
     </profile>
