Added dedicated liveness and readiness indicators.

--- a/spring-weather-jar/src/main/resources/application.properties
+++ b/spring-weather-jar/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 
-info.app.name=Spring Weather (WAR)
+info.app.name=Spring Weather (JAR)
 info.app.description=
 info.app.version=1.0.0
 
 management.server.port=8080
+
+management.endpoint.health.group.liveness.include=livenessProbe,livenessCheck
+management.endpoint.health.group.readiness.include=readinessProbe,readinessCheck
 
 management.endpoints.web.base-path=/
 management.endpoints.web.exposure.include=*
