--- a/spring-weather-war/src/main/resources/application.properties
+++ b/spring-weather-war/src/main/resources/application.properties
@@ -4,6 +4,9 @@ info.app.version=1.0.0
 
 management.server.port=8080
 
+management.endpoint.health.group.liveness.include=livenessProbe,livenessCheck
+management.endpoint.health.group.readiness.include=readinessProbe,readinessCheck
+
 management.endpoints.web.base-path=/
 management.endpoints.web.exposure.include=*
 management.endpoint.beans.enabled=true
