Added custom metrics and property based configuration.

--- a/spring-weather-jar/src/main/resources/application.properties
+++ b/spring-weather-jar/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-
 info.app.name=Spring Weather (JAR)
 info.app.description=
 info.app.version=1.0.0
+
+sleep.bound=250
 
 management.server.port=8080
 
