--- a/spring-weather-war/src/main/resources/application.properties
+++ b/spring-weather-war/src/main/resources/application.properties
@@ -2,6 +2,8 @@ info.app.name=Spring Weather (WAR)
 info.app.description=
 info.app.version=1.0.0
 
+sleep.bound=250
+
 management.server.port=8080
 
 management.endpoint.health.group.liveness.include=livenessProbe,livenessCheck
