--- a/quarkus-weather-war/pom.xml
+++ b/quarkus-weather-war/pom.xml
@@ -4,7 +4,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
     <groupId>cloud.nativ.flamewars</groupId>
-    <artifactId>quarkus-weather</artifactId>
+    <artifactId>quarkus-weather-war</artifactId>
     <version>1.0.0</version>
     <packaging>war</packaging>
     <properties>
