--- a/payara-weather-jar/pom.xml
+++ b/payara-weather-jar/pom.xml
@@ -31,6 +31,11 @@
       <type>pom</type>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.2.12</version>
+    </dependency>
     <!--
     <dependency>
       <groupId>org.jboss</groupId>
