Added full OpenWeather spring example.

--- a/spring-weather-jar/src/main/resources/application.properties
+++ b/spring-weather-jar/src/main/resources/application.properties
@@ -2,7 +2,22 @@ info.app.name=Spring Weather (JAR)
 info.app.description=
 info.app.version=1.0.0
 
-sleep.bound=250
+next.update.offset=1
+weather.appid=5b3f51e527ba4ee2ba87940ce9705cb5
+weather.uri=https://api.openweathermap.org
+
+spring.jpa.open-in-view: false
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+
+spring.datasource.url=jdbc:postgresql://weather-db:5432/weather
+spring.datasource.username=spring
+spring.datasource.password=1qay2wsx
+
+spring.datasource.hikari.auto-commit=false
+spring.datasource.hikari.connection-timeout=10000
+spring.datasource.hikari.maximum-pool-size=10
 
 management.server.port=8080
 
