--- a/spring-weather-jar/src/main/resources/application.properties
+++ b/spring-weather-jar/src/main/resources/application.properties
@@ -6,7 +6,7 @@ next.update.offset=1
 weather.appid=5b3f51e527ba4ee2ba87940ce9705cb5
 weather.uri=https://api.openweathermap.org
 
-spring.jpa.open-in-view: false
+spring.jpa.open-in-view=false
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
